2007-07-31  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_slider):
	* themes/Clearlooks/gtk-2.0/gtkrc:
	Fixed the menubar bug

2007-07-31  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	Update for 2.11.4 release.

2007-07-29  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Hue to 213 instead 211

2007-07-29  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	New ColorScheme

2007-07-29  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_draw_gummy_gradient), (clearlooks_gummy_draw_button),
	(clearlooks_gummy_draw_progressbar_fill),
	(clearlooks_gummy_draw_tab), (clearlooks_gummy_draw_slider),
	(clearlooks_gummy_draw_scrollbar_stepper),
	(clearlooks_gummy_draw_scrollbar_slider),
	(clearlooks_gummy_draw_list_view_header),
	(clearlooks_gummy_draw_toolbar), (clearlooks_gummy_draw_menuitem),
	(clearlooks_gummy_draw_menubaritem):
	Ordered the code with few useful #define for the gradients

2007-07-29  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Everytime we add engine "clearlooks" we need to specify the style

2007-07-28  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Fix menu item matching and add a special match for menubar menu items.

2007-07-28  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Gummy's gtkrc

2007-07-27  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_slider):
	Added vertical handles

2007-07-26  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_rc_style.c:
	(clearlooks_rc_style_init):
	Little fix

2007-07-24  Andrea Cimitan  <andrea.cimitan@gmail.com>

        * engines/clearlooks/src/clearlooks_draw.c: